# agent-inspector

./: CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
agent_inspector/: cli.py
agent_inspector/configs/: anthropic.yaml  openai.yaml
integrations/: AGENT_INSPECTOR_SETUP.md
integrations/claude/: .mcp.json  README.md
integrations/claude/.claude-plugin/: plugin.json
integrations/claude/commands/: analyze.md  correlate.md  debug.md  fix.md  gate.md  report.md  scan.md  setup.md  status.md
integrations/claude/hooks/: hooks.json
integrations/claude/scripts/: ensure-running.sh
integrations/claude/skills/analyze/: SKILL.md
integrations/claude/skills/correlate/: SKILL.md
integrations/claude/skills/fix/: SKILL.md
integrations/claude/skills/gate/: SKILL.md
integrations/claude/skills/report/: SKILL.md
integrations/claude/skills/scan/: SKILL.md
integrations/claude/skills/setup/: SKILL.md
integrations/claude/skills/status/: SKILL.md
integrations/cursor/cursor-commands/: agent-debug.md  agent-setup.md
integrations/cursor/cursor-rules/: agent-inspector.mdc
